<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>swri_roscpp</name>
  <version>1.2.0</version>
  <description>

     swri_roscpp

  </description>
  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>diagnostic_updater</depend>
  <test_depend>gtest</test_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <export><build_type>ament_cmake</build_type>
  </export>
    </package>
