<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>swri_string_util</name>
  <version>2.1.0</version>
  <description>

     swri_string_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>rostest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
